<resources>
    <string name="app_name">ExampleCodeKotlin</string>
    <string name="todo">TODO</string>
    <string name="validate">validate</string>
    <string name="data_from_main_activity">data from mainActivity</string>
    <string name="native_http">native http</string>
    <string name="volley">volley</string>
    <string name="ok_http">okHttp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mobile_navigation">mobile_navigation</string>
    <string name="test_state">test  saved value</string>
    <string name="search">Search</string>
    <string name="write_your_name">write your name</string>
    <string name="share">Share</string>
    <string name="price">$35</string>
    <string name="fruit">fruit</string>
    <string name="fruit_name">fruit name</string>
    <string name="go_MainActivity3">Go to Activity3</string>
    <string name="delete">delete</string>
    <string name="action_settings">Go to MainActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer">developer</string>
    <string name="next">next</string>
    <string name="input">input</string>
    <string name="_0">0°</string>
    <string name="city">city</string>
    <string name="weather">weather</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="hello">Welcome Weather App</string>
    <string name="btn_chile">Chile Weather</string>
    <string name="btn_usa">USA Weather</string>

    <string name="go_MainActivity4">Activity4</string>
    <string name="previous">Previous</string>

    <string name="temperature">%1$s °</string>
    <string name="first_fragment">first_fragment</string>

</resources>