<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.MainActivity2">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/tv_data"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textAlignment="center"
            android:hint="@string/data_from_main_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_data" />

        <Button
            android:id="@+id/btn_native_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/native_http"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_validate" />

        <Button
            android:id="@+id/btn_volley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volley"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_native_http" />

        <Button
            android:id="@+id/btn_ok_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_http"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_volley" />

        <Button
            android:id="@+id/btn_test_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ok_http" />

        <Button
            android:id="@+id/btn_mainActivity3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_MainActivity3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_test_state" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>