<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.temperature.SecondFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/color_temperature"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btn_chile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_chile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_weather" />

    <Button
        android:id="@+id/btn_usa"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_usa"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_weather" />

</LinearLayout>